--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
 		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^5.0.0-beta.5",
 		"axios": "^0.22.0",
+		"core-js": "^3.18.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.5",
 		"react-router-dom": "^5.3.0",
 		"redux": "^4.1.1",
+		"regenerator-runtime": "^0.13.9",
 		"web-vitals": "^2.1.0"
 	},
 	"babel": {
