--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^5.0.0-beta.5",
+		"@mui/icons-material": "^5.0.3",
 		"axios": "^0.22.0",
 		"core-js": "^3.18.1",
 		"react": "^17.0.2",
