--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "webpack-dev-server",
-		"start": "webpack"
+		"start": "webpack",
+		"start:all": "concurrently \"npm run dev\" \"json-server --watch db.json\""
 	},
 	"repository": {
 		"type": "git",
@@ -24,6 +25,7 @@
 		"@babel/preset-env": "^7.15.4",
 		"@babel/preset-react": "^7.14.5",
 		"babel-loader": "^8.2.2",
+		"concurrently": "^6.3.0",
 		"copy-webpack-plugin": "^9.0.1",
 		"css-loader": "^6.2.0",
 		"style-loader": "^3.2.1",
@@ -38,6 +40,7 @@
 		"@mui/icons-material": "^5.0.3",
 		"axios": "^0.22.0",
 		"core-js": "^3.18.1",
+		"json-server": "^0.17.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.5",
