--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"react-router-dom": "^5.3.0",
 		"redux": "^4.1.1",
 		"regenerator-runtime": "^0.13.9",
+		"uuid": "^3.4.0",
 		"web-vitals": "^2.1.0"
 	},
 	"babel": {
